--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
       "supportsTablet": true,
       "bundleIdentifier":"com.uberclone",
       "config":{
-        "googleMapsApiKey" :"AIzaSyDStfmpssJNekzg9aPUsz8s4b2WXDWN3Bs"
+        "googleMapsApiKey" :"key"
       }
     },
     "android": {
